# SmartNIC-Based-Heterogeneous-Cluster

./: .gitignore  CMakeLists.txt  DESIGN.md  EXPERIMENT_SUMMARY.md  INSTRUCTION.md  README.md
ansible/: exp_d_setup.yml  inventory.yml
bench/gemm_bench/: Makefile  gemm_bench.c
bench/latency_bench/: Makefile  bench_host.c  bench_nic.c
bench/metric_push/: CMakeLists.txt  Makefile  metric_push.c  metric_push.cc
bench/mock_slave/: CMakeLists.txt  Dockerfile  Makefile  mock_slave.c  mock_slave.cc  mock_slave_grpc.cc
bench/rdma_e2e/: CMakeLists.txt  e2e_host.c  e2e_nic.c
common/: node_state.h  protocol.h  rdma_transport.c  rdma_transport.h  timing.h
control-plane/forwarder/: Makefile  forward_routine.c
control-plane/master/: CMakeLists.txt  Makefile  cluster_master.cc  db.c  db.cc  db.h  db_writer.cc  db_writer.h  grpc_service.cc  grpc_service.h  http_status.cc  http_status.h  master_monitor.c  node_registry.cc  node_registry.h
control-plane/orchestrator/: agent_client.py  orchestrator.py  requirements.txt
control-plane/orchestrator_agent/: CMakeLists.txt  orchestrator_agent.cc
control-plane/rdma_bridge/: CMakeLists.txt  rdma_bridge_common.h  rdma_bridge_master.cc  rdma_bridge_slave.cc
control-plane/slave/: CMakeLists.txt  Makefile  bf2_collector.cc  bf2_collector.h  host_collector.cc  host_collector.h  rdma_uds_client.cc  rdma_uds_client.h  slave_agent.cc  slave_monitor.c
control-plane/watchdog/: CMakeLists.txt  master_watchdog.cc
docs/: bf2_interconnect_setup.md  build_and_run_guide.md
proto/: CMakeLists.txt  cluster.proto  orchestrator_agent.proto
result/: experiment_results.md
scripts/: agent_simulator.py  bf2_cluster_verify.sh  bf2_rdma_setup.sh  ch4_bf2_nginx.sh  ch4_exp_G_profile.sh  ch4_exp_H_interference.sh  ch4_exp_H_interference.sh.legacy  ch4_exp_I2_tail_latency.sh  ch4_exp_I_nginx_perf.sh  ch4_exp_J2_local_agent.sh  ch4_exp_J_orchestration.sh  ch4_exp_K_threshold_sweep.sh  ch4_interference.sh  ch4_orchestration.sh  ch4_workload_profile.sh  ch5_exp_K_cgroups.sh  ch5_exp_K_e2e.sh  config.sh  deploy_orchestrator_agent.sh  exp_A2_e2e_rdma.sh  exp_A_latency.sh  exp_B_interference.sh  exp_B_interference.sh.legacy  exp_C_scale.sh  exp_D_fault_recovery.sh  exp_kubelet.sh  gen_py_protos.sh  run_exp_D.sh  run_exp_D_v2.sh  run_exp_D_v3.sh  run_exp_D_v4.sh  run_exp_D_v5.sh  run_exp_E.sh  run_exp_F.sh  run_repeated.sh  setup_bf2_docker.sh
scripts/analyze/: analyze_A.py  analyze_A_e2e.py  analyze_B.py  analyze_C.py  analyze_I_tail.py  analyze_threshold_sweep.py  emit_summary.py  stats.py
tunnel/: comch_api.h
tunnel/host/: Makefile  comch_host.c  comch_host.h  comch_host_doca31.c
tunnel/nic/: Makefile  comch_nic.c  comch_nic.h  comch_nic_doca15.c  comch_nic_doca31.c
